@@ -13,10 +13,10 @@
   <output_main_file>False</output_main_file>
   <output_support_files>False</output_support_files>
   <output_build_files>False</output_build_files>
-  <main_source_file>studio_interface.cc</main_source_file>
-  <main_header_file>studio_interface.h</main_header_file>
-  <handler_source_file>studio_callbacks.cc</handler_source_file>
-  <handler_header_file>studio_callbacks.h</handler_header_file>
+  <main_source_file>xx_interface.cc</main_source_file>
+  <main_header_file>xx_interface.h</main_header_file>
+  <handler_source_file>xx_callbacks.cc</handler_source_file>
+  <handler_header_file>xx_callbacks.h</handler_header_file>
   <support_source_file>studio_support.cc</support_source_file>
   <support_header_file>studio_support.h</support_header_file>
 </project>
