@@ -51,7 +51,7 @@ class Shape_info
  */
 class Shape_chooser
 	{
-	GtkWidget *chooser;
+	GtkWidget *chooser;		// The main widget
 	Vga_file *ifile;		// Where the shapes come from.
 	int num_shapes;			// Total # shapes in ifile.
 	char **names;			// Names of shapes (or null).
@@ -77,11 +77,13 @@ class Shape_chooser
 	void render();			// Draw list.
 	void scroll(int newindex);	// Scroll.
 public:
-	Shape_chooser(Vga_file *i, char **nms, int w, int h);
+	Shape_chooser(Vga_file *i, int w, int h);
 	~Shape_chooser();
 	
 	GtkWidget *get_widget() 
 		{ return chooser; }
+		
+	void set_shape_names(char **nms);
 					// Turn off selection.
 	void unselect(bool need_render = true);
 	int is_selected()		// Is a shape selected?
